--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             height: 120px;
             background-color: transparent;
             margin: 10px;
-            border: 3px solid white;
+            border: 3px solid black;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
